# AquaFS-xiji

./: .gitignore  README.md
aquafs-plugin/: .gitmodules  CMakeLists.txt  README.md  aquafs.mk  generate-version.sh
aquafs-plugin/.github-disabled/workflows/: long-performance-xfs.yaml  long-performance.yaml  mtr-test.yaml  percona-server-smoke-test.yaml  rocks-nightly.yaml  short-performance-xfs.yaml  short-performance.yaml  smoke-test-debug.yaml  smoke-test.yaml  zbdbench.yaml
aquafs-plugin/fs/: aquafs_namespace.h  fs_aquafs.cc  fs_aquafs.h  io_aquafs.cc  io_aquafs.h  metrics.h  metrics_prometheus.h  metrics_sample.h  snapshot.h  zbd_aquafs.cc  zbd_aquafs.h  zbdlib_aquafs.cc  zbdlib_aquafs.h  zonefs_aquafs.cc  zonefs_aquafs.h
aquafs-plugin/fs/raid/: zone_raid.cc  zone_raid.h  zone_raid0.cc  zone_raid_auto.cc  zone_raid_auto.h
aquafs-plugin/util/: Makefile  README.md  aquafs  aquafs.8  aquafs.cc  db_bench.cc
aquafs-plugin/util/tools/: tools.cc  tools.h
aquafs-plugin/util/unit_tests/: libzbd_read_write.cc  test_raid1_recovery.cc  test_seq_read_write.cc  zbd_read_write.cc
docs/: README.md  SUMMARY.md  book.toml  研究目标.md  问题列表.md
docs/zenfs源码分析/: zenfs.md
docs/zns设备模拟/: README.md  nullblk.md  zns.md
docs/使用文档/: GetStarted.md  README.md
docs/研究方向/: RAID.md  README.md  整体架构.md  文件系统通用性.md  融合文件系统.md  调参.md
docs/调参/: 调参.md
docs/调研/: Flash 嵌入式文件系统.md  README.md  f2fs.md  flash.md  zns.md  zone分配策略.md
docs/进度报告/: 2023-04-29.md  2023-05-27.md  2023-06.md  README.md
docs/题目描述与分析/: README.md  往年实现分析.md  题目分析.md
